# silentefail

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  custom_schema_example.py  langchain_example.py
silentefail/: __init__.py  auditor.py  models.py
silentefail/failure_classes/: __init__.py  confident_wrong.py  hallucinated_structure.py  schema_drift.py  silent_truncation.py
silentefail/golden/: __init__.py  dataset.py
silentefail/report/: __init__.py  generator.py  template.html
silentefail/runners/: __init__.py  function_runner.py  langchain_runner.py
silentefail/utils/: __init__.py  logger.py  replay.py
silentefail/validators/: __init__.py  pydantic_validator.py  type_validator.py
tests/: test_auditor.py  test_confident_wrong.py  test_hallucinated_structure.py  test_schema_drift.py  test_silent_truncation.py
tests/fixtures/: sample_chains.py  sample_schemas.py
