[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silentefail"
version = "0.1.0"
description = "LLM pipeline integrity testing — catch the failures your tests never will"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dharsha Reddy", email = "dharshareddy02@gmail.com" }]
keywords = ["llm", "testing", "langchain", "pipeline", "integrity", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "jinja2>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
langchain = [
    "langchain>=0.2",
    "langchain-openai>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/dharshareddy02/silentefail"
Repository = "https://github.com/dharshareddy02/silentefail"

[tool.hatch.build.targets.wheel]
packages = ["silentefail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"
